Update, ReadMe og fikset kode

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <div class="tekstInfo" id="tekstInfo">
                 
             </div>
+            <div class="feilMelding" id="feilMelding">
+                
+            </div>
         </div>
     </section>
     <script src="index.js"></script>
